CleanUp decprecated code